--- a/src/Trackr/css/style.css
+++ b/src/Trackr/css/style.css
@@ -28,6 +28,16 @@ body {
 	overflow: auto;
 }
 
+#split {
+	background: yellow;
+	bottom: 50px;
+	position: absolute;
+	top: 50px;
+	left: 100px;
+	width: 5px;
+	cursor: e-resize;
+}
+
 .node {
 	white-space: nowrap; 
 }
@@ -40,7 +50,7 @@ body {
 	background: black;
 	bottom: 50px;
 	color: white;
-	left: 100px;
+	left: 105px;
 	overflow: auto;
 	position: absolute;
 	right: 0;
