--- a/src/Trackr/css/style.css
+++ b/src/Trackr/css/style.css
@@ -7,60 +7,46 @@ body {
 }
 
 #main {
-	 position: relative;
-	 height: 100%;
+	height: 100%;
+	position: relative;
 }
 
 #top {
-	background: lightgray;
-	height: 50px;
+	border: 1px solid;
+	margin: 5px;
+	padding: 4px;
+	height: 30px;
 	position: absolute;
-	width: 100%;
+	left: 0;
+	right: 0;
 }
 
 #nodes {
-	background: red;
-	bottom: 50px;
-	color: white;
-	position: absolute;
-	top: 50px;
-	width: 100px;
+	border: 1px solid;
+	bottom: 0;
+	margin: 0 5px 5px 5px;
 	overflow: auto;
-}
-
-#split {
-	background: yellow;
-	bottom: 50px;
+	padding: 4px;
 	position: absolute;
 	top: 50px;
-	left: 100px;
-	width: 5px;
-	cursor: e-resize;
+	width: 130px;
 }
 
 .node {
-	white-space: nowrap; 
+	cursor: default;
+	white-space: nowrap;
 }
 
-.nodes .nodes {
-	padding-left: 10px;
-}
+.nodes .nodes { padding-left: 10px; }
 
 #middle {
-	background: black;
-	bottom: 50px;
-	color: white;
-	left: 105px;
+	border: 1px solid;
+	bottom: 0;
+	left: 150px;
+	margin: 0 5px 5px 0;
 	overflow: auto;
+	padding: 4px;
 	position: absolute;
 	right: 0;
 	top: 50px;
-}
-
-#bottom {
-	background: lightgray;
-	bottom: 0;
-	height: 50px;
-	position: absolute;
-	width: 100%;
 }
