--- a/src/Trackr/css/style.css
+++ b/src/Trackr/css/style.css
@@ -13,11 +13,11 @@ body {
 
 #top {
 	border: 1px solid;
+	height: 30px;
+	left: 0;
 	margin: 5px;
 	padding: 4px;
-	height: 30px;
 	position: absolute;
-	left: 0;
 	right: 0;
 }
 
@@ -32,6 +32,17 @@ body {
 	width: 130px;
 }
 
+#middle {
+	border: 1px solid;
+	bottom: 0;
+	left: 150px;
+	margin: 0 5px 5px 0;
+	overflow: auto;
+	position: absolute;
+	right: 0;
+	top: 50px;
+}
+
 .node {
 	cursor: default;
 	white-space: nowrap;
@@ -39,14 +50,12 @@ body {
 
 .nodes .nodes { padding-left: 10px; }
 
-#middle {
-	border: 1px solid;
-	bottom: 0;
-	left: 150px;
-	margin: 0 5px 5px 0;
-	overflow: auto;
+.task {
+	border-style: solid;
+	border-bottom-width: 1px;
 	padding: 4px;
-	position: absolute;
-	right: 0;
-	top: 50px;
+}
+
+.taskdetail {
+	height: 200px;
 }
